# devhub-gpui

./: ADR.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
crates/devhub-core/: Cargo.toml
crates/devhub-core/src/: activity.rs  ai.rs  cache.rs  cancellation.rs  config.rs  discovery.rs  git.rs  lib.rs  persistence.rs  remote.rs  ssh.rs  todos.rs  tools.rs  workspace.rs
crates/devhub-core/tests/: baseline-v1.rs
crates/devhub-core/tests/fixtures/: fake_ssh.rs
crates/devhub-gpui/: Cargo.toml  build.rs
crates/devhub-gpui/assets/fonts/DepartureMono/: LICENSE.txt  README.md
crates/devhub-gpui/src/: app.rs  ask.rs  assets.rs  commands.rs  diagnostics.rs  editors.rs  lib.rs  main.rs  platform.rs  scan.rs  shell.rs  terminal.rs  theme.rs  todo.rs  ui.rs
crates/devhub-mcp/: Cargo.toml  build.rs
crates/devhub-mcp/src/: http.rs  lib.rs  main.rs
crates/devhub-mcp/tests/: http.rs  http_client.rs
packaging/linux/: AppRun  devhub-gpui.desktop  devhub-mcp.desktop
packaging/macos/: DevHub-MCP.Info.plist  DevHub.Info.plist
packaging/windows/: DevHub.iss
