[workspace]
members = ["crates/devhub-core", "crates/devhub-gpui"]
default-members = ["crates/devhub-gpui"]
resolver = "2"

[workspace.dependencies]
devhub-core = { path = "crates/devhub-core" }
gpui = "0.2.2"
ignore = "0.4"
raw-window-handle = "0.6"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
