[workspace]
members = ["crates/devhub-core", "crates/devhub-gpui"]
default-members = ["crates/devhub-gpui"]
resolver = "2"

[workspace.dependencies]
devhub-core = { path = "crates/devhub-core" }
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"
ignore = "0.4"
notify = "7.0.0"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
keyring = { version = "3.6.3", default-features = false }
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
vte = "0.15"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = "thin"
