[package]
name = "devhub-core"
version = "2.0.0"
edition = "2021"
rust-version = "1.89"
publish = false

[dependencies]
ignore.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }
