[package]
name = "devhub-gpui"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "devhub-gpui"
path = "src/main.rs"
test = false

[dependencies]
devhub-core.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows.workspace = true

[build-dependencies]
resvg = "0.45.1"
winresource = "0.1"
