[package]
name = "devhub-gpui"
version = "1.1.0"
edition = "2021"
publish = false

[[bin]]
name = "devhub-gpui"
path = "src/main.rs"
test = false

[dependencies]
devhub-core.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
notify.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
vte.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows.workspace = true

[build-dependencies]
resvg = "0.45.1"
winresource = "0.1"
